# omniclaw

./: .env-sample  .gitignore  README.md  pyproject.toml
architecture/functional/: FRD-001-Storage-Connectivity.md  FRD-002-CLI-Backend-Service-Startup.md  FRD-003-CLI-Welcome-Message-Banner-Display.md
architecture/technical/: Architecture.md
backend/src/: app.py
backend/src/cli/: cli.py
backend/src/utils/: AppConfig.py  app_config.py  logger.py
